# tauri-local-cinema

./: .gitattributes  .gitignore  README.md  build-windows-installer.sh  drizzle.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md
docs/decisions/: 0001-player-window.md
drizzle/schema/: media.ts
scripts/: build-windows-installer.ps1  setup-tools.ps1
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs  state.rs
src-tauri/src/contracts/: player.rs
src-tauri/src/infrastructure/db/: mod.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/filesystem/: mod.rs
src-tauri/src/modules/media/: mod.rs
src-tauri/src/modules/metadata/: mod.rs
src-tauri/src/modules/player/: mod.rs
src-tauri/src/modules/scanner/: mod.rs
src-tauri/src/modules/settings/: mod.rs
src-tauri/src/support/: mod.rs
src-tauri/windows/: hooks.nsh
src/app/providers/: AppProviders.tsx
src/app/router/: index.tsx
src/app/theme/: global.css  theme.ts
src/components/layout/: AppShell.tsx
src/components/ui/: LibraryRootsField.tsx  SectionCard.tsx
src/features/player/components/: EmbeddedPlayerPage.tsx  VolumeControl.tsx
src/features/player/services/: continueWatching.ts  (+3 more)
src/pages/home/: HomePage.tsx
src/pages/settings/: SettingsPage.tsx
src/stores/: app.store.ts
src/types/contracts/: library.ts  player.ts
src/utils/: libraryRoots.ts
(+6 files in other folders)
